fix bottom toolbar div covering viewport

--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -108,64 +108,62 @@
 
 }
 
-.bottom-toolbar-container {
-	display: none;
+.bottom-toolbar-wrapper {
+	transition: 1s;
 	position: fixed;
 	width: 100%;
-	height: 100vh;
-	top: 0;
-	.bottom-toolbar-wrapper {
-		transition: 1s;
-		position: absolute;
+	height: 70px;
+	background: white;
+	bottom: -70px;
+	border: 1px solid $color__blue;
+	border-left: 0;
+	border-right: 0;
+	z-index: 3;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	.bottom-toolbar {
+		height: 100%;
 		width: 100%;
-		height: 70px;
-		background: white;
-		bottom: -70px;
-		border: 1px solid $color__blue;
-		border-left: 0;
-		border-right: 0;
-		z-index: 3;
+		max-width: 1024px;
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
 		align-items: center;
-		.bottom-toolbar {
-			height: 100%;
-			width: 100%;
-			max-width: 1024px;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			.tools {
-				font-size: 2rem;
-				padding: 0 20px;
-				color: $color__blue;
-				i {
-					padding: 0 10px;
-				}
+		.tools {
+			font-size: 2rem;
+			padding: 0 20px;
+			color: $color__blue;
+			i {
+				padding: 0 10px;
 			}
-			.next-story {
-				border-left: solid 1px $color__blue;
-				padding: 0 20px;
-				font-family: $font__header;
-				p{
-					margin: 0;
-					padding: 0;
-				}
-				a {
-					text-decoration: none;
-					text-transform: uppercase;
-					color: $color__blue;
-					&:hover {
-						color: $color__orange;
-					}
+		}
+		.next-story {
+			border-left: solid 1px $color__blue;
+			padding: 0 20px;
+			font-family: $font__header;
+			p{
+				margin: 0;
+				padding: 0;
+			}
+			a {
+				text-decoration: none;
+				text-transform: uppercase;
+				color: $color__blue;
+				&:hover {
+					color: $color__orange;
 				}
 			}
 		}
 	}
-	.bottom-toolbar-wrapper-slide-up {
-		transition: 1s;
-		bottom: 50px;
-	}
+}
+.bottom-toolbar-wrapper-slide-up {
+	transition: 1s;
+	bottom: 50px;
+}
+
+
+#disqus_thread {
+	width: 100%;
 }
 
 // breakpoints
@@ -213,6 +211,12 @@
 				border: 1px solid rgba(0,0,0,0.3);
 				margin-bottom: 4rem;
 			}
+			.comment-section-border {
+				width: 100%;
+				padding: 3rem 4rem;
+				border: 1px solid rgba(0,0,0,0.3);
+				margin-bottom: 4rem;
+			}
 			p {
 				margin: 0 2rem 1rem 2rem;
 			}
@@ -228,9 +232,6 @@
 				}
 			}
 		}
-	}
-	.bottom-toolbar-container {
-		display: block;
 	}
 
 
